--- a/css-demo/assets/css/style.css
+++ b/css-demo/assets/css/style.css
@@ -1,9 +1,9 @@
 /* -------css-demo------- */
 
 /* -----Color Scheme----- 
-Main Color - #F5F5F5
-Highlights - #FB2442
-Hover - #62A870*/
+Main Color (Main) - #F5F5F5
+Secondary Color (Contrast) - #FB2442
+Tertiary Color (Links) - #62A870*/
 /*  ---------------Box Sizing-----------------  */
 
 html {
@@ -18,6 +18,7 @@ html {
 body{
     background-color:#F5F5F5;
     font-family: "Raleway", sans-serif;
+    margin:0;
 }
 
 main{
@@ -28,10 +29,81 @@ header.primary{
     background-color:#FB2442;
     color: #ffffff;
     text-align: center;
-    text-shadow:1px 1px #000000;
+    text-shadow:1px 1px 1px #000000;
+    padding: 15px 40px 15px 40px;
+    /*T,R,B,L*/
+    /*Two values Top/Bottom / L/R if two padding inputs*/
+    /*One values apply TRBL*/
 }
 
-a{
-  color: #62A870
+header.primary h1{
+  font: size 2.4rem;
+  margin: 12px 0 0;
 }
 
+header.primary a{
+  color:#62A870;
+}
+header.primary h1 a{
+  color: #F5F5F5;
+  text-decoration:none;
+}
+
+header.primary h2{
+  font-size:1.2rem;
+  margin:7px;
+}
+
+header.primary nav ul{
+  display:flex;
+  flex-direction:row;
+  justify-content:center;
+  justify-content:space-around;
+  padding:17px 0;
+}
+
+header.primary nav ul li{
+  list-style-type:none;
+}
+
+header.primary nav ul li a{
+  color:#f5f5f5;
+  text-decoration:none;
+  border:1px outset #f5f5f5;
+  padding:6px 10px;
+  background-color: rgba(162, 0, 0, 0.17);
+  border-radius:9px;
+  transition:550ms;
+}
+
+header.primary nav ul li a:hover{
+  background-color: rgba(162, 0, 0, 0.64);
+}
+
+
+
+
+
+
+
+
+/* - - - - - MEDIA QUERIES - - - - - */
+
+@media screen and (max-width: 560px){
+
+  header.primary nav ul{
+    flex-direction:column;
+    gap:10px;
+    max-width:260px;
+    font-size:1rem;
+    margin:auto;
+  }
+
+  header.primary nav a{
+    display:block;
+  }
+
+
+
+
+}
