--- a/css-demo/assets/css/style.css
+++ b/css-demo/assets/css/style.css
@@ -190,12 +190,12 @@ aside article.widget footer{
 
 /* - - - - - MEDIA QUERIES - - - - - */
 
-@media screen and (max-width: 1000px){
-/*In reality, modern screens are far wider than they used to be. The IPhone 14 Pro Max is nearly 1000 pixels in width, nowhere near the recommended 560, and most modern mobile devices average above 700*/
+@media screen and (max-width: 1440px){
+/*In reality, modern screens are far wider than they used to be. The IPhone 14 Pro Max is nearly 1000 pixels in width, nowhere near the recommended 560, and most modern mobile devices average above 700. My S24U, in QHD, is considered to be 1440 pixels in width.*/
   header.primary nav ul{
     flex-direction:column;
     gap:10px;
-    max-width:260px;
+    max-width:660px;
     font-size:1rem;
     margin:auto;
   }
@@ -206,15 +206,15 @@ aside article.widget footer{
 
   .container{
     justify-content:center;
-    max-width:650px;
+    max-width:950px;
   }
 }
 
-@media screen and (max-width: 700px){
+@media screen and (max-width: 1080px){
 
   .container{
     justify-content:center;
-    max-width:650px;
+    max-width:860px;
   }
   
 
@@ -222,7 +222,7 @@ aside article.widget footer{
     flex-direction:column;
     justify-content:center;
     align-items:center;
-    max-width: 640px;
+    max-width: 860px;
     text-align:center;
   }
 
@@ -235,7 +235,7 @@ aside article.widget footer{
   aside .container{
     flex-direction:column;
     justify-content:center;
-    max-width: 560px;
+    max-width: 860px;
   }
 
 }
