Added absolute/float files

--- a/css-demo/assets/css/style.css
+++ b/css-demo/assets/css/style.css
@@ -160,16 +160,16 @@ aside[role="complementary"]{
 }
 
 #blog .post a {
-  color: #3b638b;
+  color: #FB2442;
 }
 
 #practice h2{
-  color: #36b38b;
+  color: #629650;
   border-bottom:1px dotted #cccccc;
 }
 
 #practice a {
-  color: #3b638b;
+  color: #FB2442;
 }
 
 #practice a:hover{
