--- a/dragon/assets/css/style.css
+++ b/dragon/assets/css/style.css
@@ -1,88 +1,259 @@
-/* - - - - - DRAGON - - - - -*/
+/* Color Theme  
+ #53616B 
+ #1B2C38 
+ #181C1F - Base
+ #33536B
+ #8EA6B8
+*/
 
-/* -----Color Scheme----- 
-Main Color (Main) - #1F2F8C
-Secondary Color (Contrast) - #261F22
-Tertiary Color (Text, Points, Mid-Ground) - #F2F2F2 */
+/* ---------------Box Sizing----------------- */
 
-/*  ---------------Box Sizing-----------------  */
-imj
 html {
-    box-sizing: border-box;
-  }
-  *,
-  *:before,
-  *:after {
-    box-sizing: inherit;
-  }
+  box-sizing: border-box;
+}
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
 
-  /* - - - - - Global Styles - - - - -*/
+/* ----- Utility Styles ---- */
 
+.container {
+  width: 80vw;
+  margin: 40px auto;
+  max-width: 900px;
+}
+
+.img-right {
+  float: right;
+  margin: 10px 0 10px 20px;
+  border: 1px solid #c0c0c0;
+  padding: 5px;
+}
+
+.img-left {
+  float: left;
+  margin: 10px 20px 10px 0;
+  border: 1px solid #c0c0c0;
+  padding: 5px;
+}
+
+.img-center {
+  display: block;
+  margin: 20px auto;
+  border: 1px solid #c0c0c0;
+  padding: 5px;
+}
+
+
+/* ---- Responsive Images ----*/
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+
+/* ----- Global Styles ---- */
 
 body {
-    background: url(dragon/assets/img/spacex.png);
+  font-family: "Quantico", sans-serif;
+  margin: 0;
 }
 
-
-
-header.container#primary{
-    background-color: #1f2f8c;
-    color:#f2f2f2;
-    text-align: center;
-    text-shadow:1px 1px 1px #000000;
-    padding: 15px 40px 15px 40px;
+header.primary {
+  background-color: #181c1f;
+  text-align: center;
+  color: #ffffff;
+  text-shadow: 2px 2px #000000;
+  /* Shorhand T,R,B,L*/
+  padding: 6em 2em;
+  position: relative;
 }
 
-header.container#primary h1{
-    font-size: 3.5rem;
-    margin: 12px 0 0;
-  }
-
-  header.container#primary nav{
-    max-width:960px;
-    margin:auto;
-  }
-
-  header.container#primary nav ul{
-    display:flex;
-    flex-direction:row;
-    justify-content:center;
-    justify-content:space-around;
-    padding:17px 0;
-  }
-
-  header.container#primary nav ul{
-  list-style-type:none;
-  }
-
-  header.container#primary nav ul li a{
-    font-size:1.5rem;
-    color:#f2f2f2;
-    text-decoration:none;
-    border:1px outset #f2f2f2;
-    padding:10px 40px;
-    background-color: rgba(0, 0, 0, 0.17);
-    border-radius:5px 30px;
-    transition:220ms;
-  }
-
-body{
-    background-color: #261f22;
-      font-family: "Quantico", sans-serif;
-      margin:0;
-  }
-
-section.container#primary{
-    color:#f2f2f2;
-    line-height:1.5;
-    margin:20px 200px;
+header.primary::before {
+  content: "https://assets.codepen.io/7248/dragon-in-space.jpg";
+  background-image: url("https://assets.codepen.io/7248/dragon-in-space.jpg");
+  background-size: cover;
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+  opacity: 0.4;
 }
 
-footer{
-    color:#f2f2f2;
-    font-size:1.1rem;
-    background-color:#1f2f8c;
-    text-align:center;
-    padding:1px;
+header.primary h1 {
+  font-size: 3.2rem;
+  margin: 20px 0;
+  position: relative;
 }
-  
+
+header.primary h1 a {
+  color: #ffffff;
+  background-image: url("https://assets.codepen.io/7248/logo-2.png");
+  display: block;
+  width: 460px;
+  height: 70px;
+  margin: 0 auto;
+  text-indent: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+header.primary h2 {
+  font-family: "Goldman", cursive;
+  font-size: 2em;
+  /* Shorhand Three Value Top, Left/Right, Bottom*/
+  margin: 20px auto 40px;
+  position: relative;
+}
+
+header.primary nav ul {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  padding: 0;
+  max-width: 900px;
+  margin: 20px auto;
+}
+
+header.primary nav li {
+  list-style-type: none;
+  padding: 0;
+  width: 20%;
+}
+
+header.primary nav a:link,
+header.primary nav a:visited {
+  color: white;
+  text-decoration: none;
+  background-color: #000000;
+  background-color: rgba(142, 166, 184, 0.4);
+  padding: 10px 18px;
+  border-radius: 10px;
+  transition: 0.6s;
+  display: block;
+}
+
+header.primary nav a:hover,
+header.primary nav a:active {
+  background-color: rgba(51, 83, 107, 0.8);
+}
+
+/* ------------- Content --------------- */
+
+section#content {
+  padding: 4em 0;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size:1.3em;
+}
+
+section#content h2{
+  font-family: "Quantico", sans-serif;
+  font-size: 2.2em;
+  color: #33536b;
+  text-align: center;
+}
+
+/* - - - - - Articles - - - - - */
+
+section#articles {
+  background: #33536b;
+}
+
+section#articles .container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  border-bottom: 1px solid #c0c0c0;
+  padding: 0 0 4em 0;
+}
+
+section#articles h2,
+#content h2 {
+  flex: 0 0 100%;
+  color: #33536b;
+  text-align: center;
+  font-family: "Quantico", cursive;
+  font-size: 2em;
+}
+
+section#articles h2 {
+  color: #fff;
+  text-shadow: 2px 2px #000;
+}
+
+#articles article.post {
+  width: 30%;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
+  padding: 10px;
+  transition: 0.6s;
+  font-size: 0.8rem;
+  border-radius: 10px;
+  background: #fff;
+}
+
+#articles article.post h2 {
+  color:#33536b;
+  font-size: 1.5em;
+  text-shadow: none;
+}
+
+#articles .post a:link,
+#articles .post a:visited {
+  color: #3b638b;
+}
+
+/*------ Footer ------*/
+
+footer#colophon {
+  background-color: #1b2c38;
+}
+
+#colophon{
+  padding:1px;
+  color:#F5F5F5;
+  font-size: 1.7rem;
+  text-align: center;
+}
+
+#colophon h6 a:link,
+#colophon h6 a:visited {
+  color: #fff;
+}
+
+/* ---------------Media Queries----------------- */
+
+@media screen and (max-width: 600px) {
+  header.primary nav ul {
+    flex-direction: column;
+    margin: 0 auto;
+    width: 400px;
+  }
+
+  header.primary nav ul li {
+    margin-bottom: 10px;
+    width: 400px;
+  }
+
+  header.primary nav ul li a {
+    display: block;
+  }
+
+  section#articles .container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    border-bottom: 1px solid #c0c0c0;
+    padding: 0 0 4em 0;
+  }
+
+  #articles article.post {
+    width: 100%;
+    margin-bottom: 2em;
+  }
+}
