pushed code from yesterday's class

--- a/dragon/assets/css/style.css
+++ b/dragon/assets/css/style.css
@@ -57,7 +57,7 @@ img {
 /* ----- Global Styles ---- */
 
 body {
-  font-family: "Lato", sans-serif;
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
   margin: 0;
 }
 
@@ -102,7 +102,7 @@ header.primary h1 a {
 }
 
 header.primary h2 {
-  font-family: "Goldman", cursive;
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
   font-size: 2em;
   /* Shorhand Three Value Top, Left/Right, Bottom*/
   margin: 20px auto 40px;
@@ -149,7 +149,7 @@ section#content {
 }
 
 section#content h2 {
-  font-family: "Goldman", cursive;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 2.2em;
   color: #33536b;
   text-align: center;
@@ -175,7 +175,7 @@ section#articles h2,
   flex: 0 0 100%;
   color: #33536b;
   text-align: center;
-  font-family: "Goldman", cursive;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 2em;
 }
 
@@ -239,6 +239,11 @@ section#articles h2 {
 
 /* ------------- Aside --------------- */
 
+div .container{
+  background-color:#181c1f;
+  padding:2.5em;
+  width:900px;
+}
 /* Attribute Selector */
 aside[role="complementary"] {
   background-color: #181c1f;
