Finished SpaceX Dragon V2; Attempted w3form, switched back to wufoo after minor technical difficulties harming user QOL

--- a/dragon/assets/css/style.css
+++ b/dragon/assets/css/style.css
@@ -20,7 +20,6 @@ html {
 /* ----- Utility Styles ---- */
 
 .container {
-  width: 80vw;
   margin: 40px auto;
   max-width: 900px;
 }
@@ -163,7 +162,8 @@ section#articles {
 }
 
 aside[role="complementary"] {
-  max-width:100%;
+  max-width:70%;
+  margin:auto;
 }
 section#articles {
   background: #151d3e;
@@ -256,26 +256,27 @@ img[role=hero]{
 /* ------------- Aside --------------- */
 
 div .container{
+  max-width:100vw;
   background-color:#151d3e;
   color:#c0c0c0;
   padding:2.5em;
-  max-width:100%;
+
 }
 /* Attribute Selector */
 
-div #container {
+div.container {
   max-width:100%;
 }
 
-aside #container {
+aside.container {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  max-width:100%;
+  max-width:100vw;
 }
 
 aside article.widget {
-  max-width: 100%;
+  max-width: 100vw;
 }
 
 .widget table caption {
